<resources>
    <string name="app_name">My Banks</string>

    <string name="action_add_account">Cadastrar nova conta</string>
    <string name="action_edit_account">Editar conta</string>
    <string name="action_delete_account">Excluir conta</string>
    <string name="account_details">Detalhes da conta</string>
    <string name="label_bank">Banco: %1$s</string>
    <string name="label_agency">Agência: %1$s</string>
    <string name="label_pix_code">Chave PIX: %1$s</string>
    <string name="label_account">Conta: %1$s</string>
    <string name="label_edit_account">Editando: %1$s</string>
    <string name="label_operation">Operação: %1$s</string>
    <string name="label_type">Tipo: %1$s</string>
    <string name="label_holder">Titular: %1$s</string>
    <string name="label_cpf">CPF: %1$s</string>
    <string name="label_cnpj">CNPJ: %1$s</string>
    <string name="add_first_account">Cadastrar primeira conta</string>
    <string name="error_label">Digite a identificação da conta</string>
    <string name="error_bank">Selecione o banco</string>
    <string name="error_type">Selecione se a conta é Corrente ou Poupança</string>
    <string name="error_agency">Digite a agência</string>
    <string name="error_agency_invalid">A agência deve conter 4 ou mais dígitos</string>
    <string name="error_account">Digite o número da conta</string>
    <string name="error_account_invalid">A conta deve conter 3 ou mais dígitos</string>
    <string name="error_holder">Digite o nome do titular</string>
    <string name="error_cpf">Informe o CPF do titular</string>
    <string name="error_cnpj">Informe o CNPJ do titular</string>
    <string name="error_account_not_found">Conta não encontrada</string>
    <string name="error_load_video">O vídeo não pôde ser carregado 😭</string>
    <string name="data_copied">Dado copiado</string>
    <string name="account_copied">Conta copiada</string>
    <string name="accounts_copied">Contas copiadas</string>
    <string name="copy_account">Copiar dados da conta</string>
    <string name="copy_accounts">Copiar contas</string>
    <string name="share_account">Compartilhar dados da conta</string>
    <string name="share_accounts">Compartilhar contas</string>
    <string name="my_bank_account">Minha conta bancária</string>
    <string name="my_bank_accounts">Minhas contas bancárias</string>
    <string name="updated_title">Atualização Disponível</string>
    <string name="updated_positive">Atualizar agora</string>
    <string name="updated_negative">Mais tarde</string>
    <string name="updated_logout">Sair do app</string>
    <string name="update_available">Lançamos uma nova versão do app, atualize para receber novidades e correções.</string>
    <string name="update_needed">Lançamos uma atualização crítica obrigatória para continuar usando o app.</string>
    <string name="no_accounts_found">Nenhuma conta cadastrada ainda.</string>
    <string name="alert_backup">Se você já tinha contas salvas, ative o backup para recuperá-las.</string>
    <string name="search_no_accounts_found">Nenhuma conta encontrada.</string>
    <string name="error_unknown">Não foi possível conectar ao servidor, verifique sua conexão.</string>
    <string name="loading_settings">Carregando configurações…</string>
    <string name="loading_banks">Carregando bancos…</string>
    <string name="loading_accounts">Carregando contas…</string>
    <string name="trying_again_in">Tentando novamente em %1$d segundos</string>
    <string name="states_api_error">Não foi possível completar a consulta :(</string>
    <string name="channel_updates">Atualizações do My Banks</string>
    <string name="loading">Carregando…</string>
    <string name="sending">Enviando…</string>
    <string name="ops">Ops!</string>
    <string name="ok">OK</string>
    <string name="close">Fechar</string>
    <string name="congratulations">Parabéns!</string>
    <string name="success">Sucesso!</string>
    <string name="success_account_added">Conta cadastrada com sucesso.</string>
    <string name="success_account_edited">Conta atualizada com sucesso.</string>
    <string name="success_account_deleted">Conta excluída com sucesso.</string>
    <string name="confirm_deleted_account">Tem certeza que deseja excluir esta conta?</string>
    <string name="success_email_verified">Seu e-mail foi verificado e o backup está ativo.\n\nQuando precisar acessar de outro aparelho, basta repetir o processo.</string>
    <string name="error_validate_email">O código digitado é diferente do enviado para o e-mail (%1$s).</string>
    <string name="finish">Concluir</string>
    <string name="register_new">Adicionar outra</string>
    <string name="confirm">Confirmar</string>
    <string name="confirmation">Confirmação</string>
    <string name="cancel">Cancelar</string>
    <string name="correct_code">Código correto</string>
    <string name="bank">Banco</string>
    <string name="pix_code">Chave PIX</string>
    <string name="account_nickname">Identificação (Ex: Nubank)</string>
    <string name="type">Tipo</string>
    <string name="checking">Conta Corrente</string>
    <string name="savings">Conta Poupança</string>
    <string name="agency">Agência</string>
    <string name="account">Conta</string>
    <string name="operation">Operação (opcional)</string>
    <string name="holder">Titular</string>
    <string name="cpf">CPF</string>
    <string name="cnpj">CNPJ</string>
    <string name="save_account">Salvar conta</string>
    <string name="save_changes">Salvar alterações</string>
    <string name="is_legal_account">Conta Pessoa Jurídica (PJ)</string>
    <string name="active_sync_title">Ativar backup automático</string>
    <string name="active_sync_message">Agora que você cadastrou contas, que tal ativar o backup?\n\nVocê pode continuar usando normalmente, mas corre o risco de perder os dados se trocar de aparelho.</string>
    <string name="active_sync_positive">Ativar backup agora!</string>
    <string name="active_sync_negative">Depois</string>
    <string name="not_interested">Não tenho interesse</string>
    <string name="never_show_again">Não mostrar novamente</string>
    <string name="login_title">Identificação</string>
    <string name="login_message">Precisamos identificar você para ativar o backup automático.\n\nInforme seu e-mail abaixo e enviaremos um código de confirmação:</string>
    <string name="write_your_email">Digite seu e-mail</string>
    <string name="receive_code">Receber código</string>
    <string name="confirm_code">Confirmar código</string>
    <string name="code_sent_to_email">Código enviado por e-mail</string>
    <string name="active_auto_backup">Ativar backup automático</string>
    <string name="action_login">Entrar / Fazer Backup</string>
    <string name="action_logout">Sair da conta</string>
    <string name="logout_account">Sair da conta</string>
    <string name="confirm_logout_account">Deseja realmente sair desta conta?</string>
    <string name="remove_adas">Remover anúncios</string>
    <string name="search">Buscar</string>
    <string name="search_hint">Buscar contas…</string>
    <string name="wait_settings">Aguarde o carregamento das configurações</string>
    <string name="watch_to_by_phrase">Também não gostamos de anúncios!</string>
    <string name="watch_to_by_body">Você pode assistir a um vídeo para remover anúncios por %1$d dias e ainda ajudar a manter o app atualizado.</string>
    <string name="watch_to_by_body_paid">OBRIGADO! Você tem um plano ativo por mais %1$d dia(s). Mas você pode assistir novamente para renovar o plano.</string>
    <string name="tank_you">Obrigado</string>
    <string name="watch_to_by_tanks">Você está livre de anúncios por %1$d dia(s) 😍</string>
    <string name="watch_to_by_button">Assistir ao vídeo</string>
    <string name="watch_to_by_button_again">Assistir novamente</string>
    <string name="send_feedback">Enviar feedback</string>
    <string name="rate_on_store">Avaliar na loja</string>
    <string name="share_app">Compartilhar app</string>
    <string name="feedback_instructions">Se você tiver dúvidas, críticas ou sugestões, envie-nos uma mensagem:</string>
    <string name="name">Nome</string>
    <string name="email">E-mail</string>
    <string name="message">Mensagem</string>
    <string name="error_name">Por favor, informe seu nome 😅</string>
    <string name="error_email">Por favor, informe seu e-mail 😅</string>
    <string name="error_comments">Por favor, digite sua mensagem 😅</string>
    <string name="sending_feedback">Enviando…</string>
    <string name="error_connection">Ops, ocorreu um erro de conexão com o servidor. Verifique sua internet e tente novamente.</string>
    <string name="share_subject">Conheça o app My Banks</string>
    <string name="share_text">Organize facilmente suas contas bancárias e copie tudo com facilidade:\n\n%1$s</string>
    <string name="tip_touch_values">DICA: Toque na informação para copiar os valores.</string>
    <string name="watch_to_by_success">Plano ativado com sucesso 😍</string>
    <string name="plan_success_title">Plano ativado 😍</string>
    <string name="plan_success_body">Seu período sem anúncios foi ativado com sucesso!</string>
    <string name="restart_app">Reiniciar app</string>
    <string name="error_on_update">Não atualizado</string>
    <string name="error_on_update_message">Você não completou o processo de atualização do app.</string>
    <string name="try_again">Tentar novamente</string>
    <string name="update_later">Atualizar mais tarde</string>
    <string name="share_with">Compartilhar com:</string>
</resources>
