<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.CreateAccountActivity">

    <ScrollView
            android:id="@+id/sw_create"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/fab_margin">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_field_margin"
                    android:hint="@string/account_nickname">

                <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName|textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_field_margin"
                    android:hint="@string/pix_code">

                <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_pix_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ly_bank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_field_margin"
                    android:hint="@string/bank">

                <AutoCompleteTextView
                        android:id="@+id/et_bank"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName|textCapWords"
                        android:selectAllOnFocus="true"
                        tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="@dimen/form_field_margin"
                    android:layout_marginEnd="4dp"
                    android:text="@string/type" />

            <RadioGroup
                    android:id="@+id/rg_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal">

                <RadioButton
                        android:id="@+id/rb_checking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:checked="true"
                        android:text="@string/checking" />

                <RadioButton
                        android:id="@+id/rb_savings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:checked="false"
                        android:text="@string/savings" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_field_margin"
                    android:hint="@string/agency">

                <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_agency"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789-"
                        android:imeOptions="actionNext"
                        android:inputType="numberDecimal"
                        android:maxLength="6" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_field_margin"
                    android:hint="@string/account">

                <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789-"
                        android:imeOptions="actionNext"
                        android:inputType="numberDecimal"
                        android:maxLength="15" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_field_margin"
                    android:hint="@string/operation">

                <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_operation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_field_margin"
                    android:hint="@string/holder">

                <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_holder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName|textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ly_document"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_field_margin"
                    android:hint="@string/cpf">

                <com.santalu.maskedittext.MaskEditText
                        android:id="@+id/et_document"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789.-"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"
                        app:met_mask="###.###.###-##" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                    android:id="@+id/cb_legal_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/is_legal_account" />

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_submit"
                    style="@style/Button"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/save_account" />
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/inc_progress_light" />

</RelativeLayout>