<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        tools:context=".activity.RemoveAdsActivity">

    <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textSize="26sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/remove_adas"/>

    <TextView
            android:id="@+id/tv_phrase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_marginTop="16dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/watch_to_by_phrase"/>

    <TextView
            android:id="@+id/tv_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_phrase"
            android:layout_marginTop="16dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/watch_to_by_body"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_watch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_body"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:text="@string/watch_to_by_button"
            android:textColor="@color/colorPrimary"/>

    <include layout="@layout/inc_progress_dark" />

</RelativeLayout>