<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".activity.LoginActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_vertical_margin">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:gravity="center"
                    android:text="@string/login_title"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:text="@string/login_message"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/rounded_border_edittext"
                    android:gravity="center"
                    android:hint="@string/write_your_email"
                    android:imeOptions="actionSend"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:ignore="Autofill" />

            <com.santalu.maskara.widget.MaskEditText
                    android:id="@+id/et_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/rounded_border_edittext"
                    android:digits="0123456789"
                    android:gravity="center"
                    android:hint="@string/code_sent_to_email"
                    android:imeOptions="actionSend"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:mask="### ###" />

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_positive"
                    style="@style/ButtonWhite"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:text="@string/receive_code" />

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_negative"
                    style="@style/ButtonLinkWhite"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/inc_progress_dark" />
</RelativeLayout>